<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_color_first"
    xmlns:tools="http://schemas.android.com/tools">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/title_schedule"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTitle" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:elevation="2dp"
            android:minHeight="200dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/iv_picture1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_soon_background" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_inner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:backgroundTint="#ECEAEA"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/small_50"
                        android:layout_gravity="center"
                        android:background="#ECEAEA">


                        <TextView
                            android:id="@+id/tv_preview_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_serif"
                            android:text="Time"
                            android:textColor="#353E81"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/tv_preview_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/noto_serif"
                            android:text="Date"
                            android:textColor="#353E81"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tv_preview_theme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:lines="3"
                    android:maxLength="100"
                    android:minLines="3"
                    android:text="@string/hint_theme"
                    android:textColor="#353E81"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/card_inner_three"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_inner" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_edit"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="36dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_edit"
                    android:translationZ="10dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_share"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_share"
                    android:translationZ="10dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/iv_edit"
                    app:layout_constraintTop_toBottomOf="@id/iv_edit" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_delete"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_delete"
                    android:translationZ="10dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/iv_share"
                    app:layout_constraintTop_toBottomOf="@id/iv_share" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_card_rectangular_no_stroke"
                    android:padding="@dimen/small_100"
                    android:layout_margin="@dimen/small_100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/tv_course_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/noto_serif"
                        android:text="210"
                        android:textColor="#353E81"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </FrameLayout>



                <androidx.cardview.widget.CardView
                    android:id="@+id/card_inner_three"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:backgroundTint="#ECEAEA"
                    android:minHeight="46dp"
                    app:cardCornerRadius="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#ECEAEA">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_preview_profile_image"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_margin="4dp"
                            android:elevation="2dp"
                            android:src="@drawable/avatar"
                            app:civ_border_color="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:padding="@dimen/small_50"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/iv_preview_profile_image"
                            app:layout_constraintTop_toTopOf="parent">


                            <TextView
                                android:id="@+id/tv_preview_full_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/noto_serif"
                                android:text="Ilon musk"
                                android:textColor="#353E81"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toEndOf="@id/profile_image"
                                app:layout_constraintTop_toTopOf="@id/profile_image" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/noto_serif"
                                android:text="Teacher"
                                android:textColor="#353E81"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toEndOf="@id/profile_image"
                                app:layout_constraintTop_toBottomOf="@id/streamAuthor" />


                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/et_add_theme"
            style="@style/TextFieldNoStroke"
            android:backgroundTint="@color/card_color_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_100"
            android:hint="@string/hint_theme"
            android:inputType="textMultiLine"
            android:maxLines="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/et_add_date"
                style="@style/TextFieldNoStroke"
                android:layout_width="0dp"
                android:backgroundTint="@color/card_color_background"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_100"
                android:layout_weight="1"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/hint_add_date"
                android:inputType="none" />

            <EditText
                android:id="@+id/et_add_time"
                style="@style/TextFieldNoStroke"
                android:backgroundTint="@color/card_color_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_100"
                android:layout_weight="1"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/hint_add_time"
                android:inputType="none" />

        </LinearLayout>
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_course_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:listitem="@layout/item_course_number"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_schedule"
            android:layout_width="match_parent"
            android:background="@drawable/shape_card_rectangular_no_stroke"
            app:backgroundTint="@color/text_color_secondary"
            android:layout_margin="@dimen/normal_100"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>
